--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -6,21 +6,25 @@ silent: true
 
 tasks:
   build:
+    desc: "Builds the firecracker-land binary"
     cmds:
       - echo "Building firecracker-land binary..."
       - go build --tags netgo --ldflags '-s -w -extldflags "-lm -lstdc++ -static"' -o bin *.go
       - echo "Done!"
   run:
+    desc: "Runs the firecracker-land binary"
     cmds:
       - echo "Running firecracker-land binary..."
       - ./bin
   clean:
+    desc: "Cleans up the firecracker-land binary"
     cmds:
       - echo "Cleaning up..."
       - rm -rf bin
       - rm -rf vmlinux.bin
       - echo "Done!"
   pull-kernel:
+    desc: "Pulls the kernel from the S3 bucket"
     cmds:
       - echo "Pulling the kernel..."
       - arch=$(uname -m)
@@ -32,6 +36,21 @@ tasks:
           echo "Kernel already exists!";
         fi
       - echo "Done!"
+  extract-init-base-tar:
+    desc: "Extract init base tar..."
+    cmds:
+      - echo "Extract for extracting rootfs process from docker image..."
+      - docker build -t drop/custom-init .
+      - echo "Done Building!"
+      - echo "Starting extraction process..."
+      - docker rm -f custom-init
+      - rm -rf rootfs.tar
+      - docker create --name custom-init drop/custom-init
+      - docker export custom-init -o rootfs.tar
+      - docker rm -f custom-init
+      - echo "Done Extraction!"
+
+
 
     
   
