refactor cloud-config file syntax

--- a/cloud-config.yaml
+++ b/cloud-config.yaml
@@ -1,28 +1,27 @@
-#Cloud-Config
+#cloud-config
 
 runcmd:
-  # install docker
-  - curl -fsSL https://get.docker.com | sh
-  # install git
-  - add-apt-repository ppa:git-core/ppa --yes --update && apt-get install git --yes
-  # install go
+  - apt-get update
+  - 'curl -fsSL https://get.docker.com | sh'
+  - >-
+    add-apt-repository ppa:git-core/ppa --yes --update && apt-get install git
+    --yes
   - curl -O https://storage.googleapis.com/golang/go1.20.1.linux-amd64.tar.gz
   - tar -xvf go1.20.1.linux-amd64.tar.gz
-  - sudo mv go /usr/local
-  - export GOROOT=/usr/local/go
-  - export GOPATH=$HOME/go
-  - export PATH=$GOPATH/bin:$GOROOT/bin:$PATH
-  # install rust with cargo
-  - curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
-  - source $HOME/.cargo/env
-  # install firecracker
+  - sudo cp -r go /usr/local
+  - sudo mv go $HOME
+  - source export GOROOT=/usr/local/go
+  - source export GOPATH=$HOME/go
+  - source export PATH=$GOPATH/bin:$GOROOT/bin:$PATH
+  # - curl --proto ''=https'' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+  # - source $HOME/.cargo/env
+  - apt install -y build-essential
+  - sudo apt install rustc -y
   - git clone https://github.com/firecracker-microvm/firecracker
   - ARCH="$(uname -m)"
   - sudo ./firecracker/tools/devtool build
-  - sudo cp ./firecracker/build/cargo_target/${x86_64}-unknown-linux-musl/debug/firecracker /usr/bin
-  - sudo cp ./firecracker/build/cargo_target/${x86_64}-unknown-linux-musl/debug/jailer /usr/bin
-  # curl install tasks
-  -  sh -c "$(curl -ssL https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin
-  # clone firecracker-land
-  - git clone https://github.com/iradukunda1/firecracker-land
+  - sudo cp ./firecracker/build/cargo_target/${ARCH}-unknown-linux-musl/debug/firecracker /usr/bin
+  - sudo cp ./firecracker/build/cargo_target/${ARCH}-unknown-linux-musl/debug/jailer /usr/bin
+  - sh -c "$(curl -ssL https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin
+  - 'git clone https://github.com/iradukunda1/firecracker-land'
   - task all -d firecracker-land
